--- a/WebVisualizations/assets/css/styles.css
+++ b/WebVisualizations/assets/css/styles.css
@@ -14,3 +14,11 @@
     opacity: 80%;
 
 }
+
+.description-header {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 33px;
+  font-weight: bold;
+  color: #02021b;
+
+}
