--- a/WebVisualizations/assets/css/styles.css
+++ b/WebVisualizations/assets/css/styles.css
@@ -1,14 +1,14 @@
 #summary {
     margin-bottom: 25px;
-    font-family: Georgia, Times, "Times New Roman", serif;
+    font-family: monospace, serif;
     font-size: 30px;
     font-weight: bold;
     color: #000080;
   }
   
 .header {
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 22px;
+  font-family: monospace, serif;
+  font-size: 22px;
     font-weight: bold;
     color: #3333bb;
     opacity: 80%;
@@ -16,9 +16,16 @@
 }
 
 .description-header {
-  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: monospace, serif;
   font-size: 33px;
   font-weight: bold;
   color: #02021b;
 
 }
+
+.intro {
+  font-family: monospace, serif;
+  font-size: 16px;
+    color: #000000;
+}
+
