--- a/WebVisualizations/assets/css/styles.css
+++ b/WebVisualizations/assets/css/styles.css
@@ -1,5 +1,6 @@
 #summary {
     margin-bottom: 25px;
+    margin-left: 35px;
     font-family: monospace, serif;
     font-size: 30px;
     font-weight: bold;
